--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "dan-castillo-site",
+  "name": "dancastillo.dev",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:out": "next build && next export",
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "react-tsparticles": "^1.17.4",
+    "tsparticles": "^1.17.4"
   },
   "devDependencies": {
     "@types/node": "^14.0.26",
