--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,12 +1,15 @@
 # Base on offical NGINX Alpine image
 FROM nginx:alpine
 
+# Set working directory
+WORKDIR /usr/app
+
 # Remove any existing config files
 RUN rm /etc/nginx/conf.d/*
 
 # Copy config files
 # *.conf files in conf.d/ dir get included in main config
-COPY ./default.conf /etc/nginx/conf.d/
+COPY ./nginx/default.conf /etc/nginx/conf.d/
 
 # Expose the listening port
 EXPOSE 80
