--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ upstream nextjs_upstream {
 server {
   listen 80 default_server;
 
-  server_name _;
+  server_name dancastillo.dev www.dancastillo.dev;
 
   server_tokens off;
 
