updated workflow and dockerfile

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -13,8 +13,11 @@ RUN rm /etc/nginx/conf.d/*
 # build
 COPY ./nginx/default.conf /etc/nginx/conf.d/
 
+RUN mkdir /etc/nginx/snippets/
+RUN mkdir /etc/nginx/certs/
+
 # Expose the listening port
-EXPOSE 80
+EXPOSE 443
 
 # Launch NGINX
 CMD [ "nginx", "-g", "daemon off;" ]
