--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,7 +5,11 @@ upstream nextjs_upstream {
 }
 
 server {
-  listen 80 default_server;
+  listen 443 ssl default_server;
+  listen [::]:443 ssl default_server;
+
+  include snippets/self-signed.conf;
+  include snippets/ssl-params.conf;
 
   server_name dancastillo.dev www.dancastillo.dev;
 
@@ -43,4 +47,12 @@ server {
   location / {
     proxy_pass http://nextjs_upstream;
   }
+}
+
+server {
+  listen 80;
+
+  server_name dancastillo.dev www.dancastillo.dev;
+
+  return 301 https://$server_name$request_uri;
 }
