--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,8 +49,11 @@ jobs:
           script: |
             docker stop $(docker ps -a -q)
             docker container rm /nextjs-container
+            docker container rm /nginx-container
             docker login -u $GITHUB_USERNAME -p $GITHUB_TOKEN docker.pkg.github.com
             docker pull docker.pkg.github.com/dancastillo/dancastillo.dev/nextjs:latest
             docker pull docker.pkg.github.com/dancastillo/dancastillo.dev/nginx:latest
             docker run --network my-network -d --name nextjs-container docker.pkg.github.com/dancastillo/dancastillo.dev/nextjs:latest
-            docker run --network my-network -d --link nextjs-container:nextjs -p 80:80 docker.pkg.github.com/dancastillo/dancastillo.dev/nginx:latest
+            docker run --network my-network -d --name nginx-container --link nextjs-container:nextjs -p 443:443 docker.pkg.github.com/dancastillo/dancastillo.dev/nginx:latest
+            docker cp /etc/nginx/snippets/* $(docker ps -aqf "name=nginx-container"):/etc/nginx/snippets/*
+            docker cp /etc/nginx/certs/dancastillo_dev_chain.crt $(docker ps -aqf "name=nginx-container"):/etc/nginx/certs/dancastillo_dev_chain.crt
