--- a/.github/workflows/deploy-old.yml
+++ b/.github/workflows/deploy-old.yml
@@ -2,7 +2,7 @@ name: build
 on:
   push:
     branches:
-      - master
+      - develop
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -48,29 +48,12 @@ jobs:
           envs: GITHUB_USERNAME, GITHUB_TOKEN
           script: |
             docker stop $(docker ps -a -q)
+            docker container rm /nextjs-container
+            docker container rm /nginx-container
             docker login -u $GITHUB_USERNAME -p $GITHUB_TOKEN docker.pkg.github.com
             docker pull docker.pkg.github.com/dancastillo/dancastillo.dev/nextjs:latest
             docker pull docker.pkg.github.com/dancastillo/dancastillo.dev/nginx:latest
-<<<<<<< HEAD
-<<<<<<< HEAD
-<<<<<<< HEAD
-            docker-compose up -d
-            --build
-=======
-                  - uses: actions/checkout@v1
-=======
->>>>>>> ec5d814... Update deploy.yml
-=======
-            ls
-            pwd
->>>>>>> da9fd81... Update deploy.yml
-      - name: Docker Compose
-        uses: actions/checkout@v2
-      - name: docker compose build
-        run: |
-          docker-compose up -d --build
-<<<<<<< HEAD
->>>>>>> ec31c22... Update deploy.yml
-=======
-          y
->>>>>>> da9fd81... Update deploy.yml
+            docker run --network my-network -d --name nextjs-container docker.pkg.github.com/dancastillo/dancastillo.dev/nextjs:latest
+            docker run --network my-network -d --name nginx-container --link nextjs-container:nextjs -p 443:443 docker.pkg.github.com/dancastillo/dancastillo.dev/nginx:latest
+            docker cp /etc/nginx/snippets/* $(docker ps -aqf "name=nginx-container"):/etc/nginx/snippets/*
+            docker cp /etc/nginx/certs/dancastillo_dev_chain.crt $(docker ps -aqf "name=nginx-container"):/etc/nginx/certs/dancastillo_dev_chain.crt
