--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,13 +5,9 @@ upstream nextjs_upstream {
 }
 
 server {
-  listen 443 ssl default_server;
-  listen [::]:443 ssl default_server;
 
-  include snippets/self-signed.conf;
-  include snippets/ssl-params.conf;
-
-  server_name dancastillo.dev www.dancastillo.dev;
+  listen 80 default_server;
+  server_name _;
 
   server_tokens off;
 
