updated deploy yml workflow
Update deploy.yml

Update deploy.yml

Update deploy.yml

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,8 +6,18 @@ upstream nextjs_upstream {
 
 server {
 
-  listen 80 default_server;
-  server_name _;
+  listen 443 ssl default_server;
+  listen [::]:443 ssl default_server;
+
+  include /etc/nginx/snippets/self-signed.conf;
+  include /etc/nginx/snippets/ssl-params.conf;
+
+  root /var/www/html;
+
+  # Add index.php to the list if you are using PHP
+  index index.html index.htm index.nginx-debian.html;
+
+  server_name dancastillo.dev www.dancastillo.dev;
 
   server_tokens off;
 
@@ -47,6 +57,7 @@ server {
 
 server {
   listen 80;
+  listen [::]:80;
 
   server_name dancastillo.dev www.dancastillo.dev;
 
